# dataselectors

./: .coveragerc  CHANGELOG.rst  Makefile  README.rst  pyproject.toml  tox.ini
dataselectors/: __init__.py  __version__.py  base.py  selectors.py  utils.py
examples/: __init__.py  iris.py
tests/: __init__.py
